[package]
name = "lorelei"
version = "0.1.0"
authors = ["btoschek <btoschek@protonmail.com>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
dotenv = "0.15.0"
chrono = "0.4.24"

# Async functionality
[dependencies.tokio]
version = "1"
features = ["full"]

# Discord API wrapper
[dependencies.serenity]
version = "0.11"
features = [
  "client",
  "cache",
  "standard_framework",
  "voice",
  "rustls_backend",
]

[dependencies.songbird]
# version = "0.3"
features = [ "builtin-queue", "yt-dlp" ]

# Temporary workaround mentioned in https://github.com/serenity-rs/songbird/issues/172#issuecomment-1500999525
git = "https://github.com/Erk-/songbird/"
branch = "do-not-fail-if-new-opcode"
