[package]
name = "lorelei"
version = "0.1.0"
authors = ["btoschek <btoschek@protonmail.com>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
dotenv = "0.15.0"
chrono = "0.4.24"
serde = "1.0.198"
serde_json = "1.0.116"

# Async functionality
[dependencies.tokio]
version = "1"
features = ["full"]

# Discord API wrapper
[dependencies.serenity]
version = "0.11"
features = [
  "client",
  "cache",
  "standard_framework",
  "voice",
  "rustls_backend",
]

[dependencies.songbird]
version = "0.3"
features = [ "builtin-queue", "yt-dlp" ]
